--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             android:id="@+id/left_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginRight="10sp"
+            android:layout_marginRight="@dimen/dimen_20px"
             android:layout_weight="0.6"
             android:gravity="center"
             android:orientation="vertical" >
@@ -25,10 +25,10 @@
         <LinearLayout
             android:layout_width="1sp"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10sp"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginTop="10sp"
+            android:layout_marginBottom="@dimen/dimen_10px"
+            android:layout_marginLeft="@dimen/dimen_10px"
+            android:layout_marginRight="@dimen/dimen_10px"
+            android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/grey"
             android:gravity="center"
             android:orientation="vertical" >
@@ -59,10 +59,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="top"
-            android:layout_marginLeft="20sp"
+            android:layout_marginLeft="@dimen/dimen_40px"
             android:gravity="center_horizontal"
     		android:text="@string/str_test_time_show"
-    		android:textSize="15sp"
+    		android:textSize="@dimen/dimen_30px"
     		android:textColor="@color/white" />
               
         <TextView
@@ -70,11 +70,11 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="10sp"
+            android:layout_marginLeft="@dimen/dimen_20px"
             android:gravity="center_horizontal"
             android:text="@string/str_test_time_show"
             android:textColor="@color/white"
-            android:textSize="15sp" />
+            android:textSize="@dimen/dimen_30px" />
             
     	</LinearLayout>
 </LinearLayout>
