--- a/res/layout/info_item_bar.xml
+++ b/res/layout/info_item_bar.xml
@@ -8,21 +8,21 @@
         android:id="@+id/tv_item_bar_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5sp"
-        android:layout_marginLeft="5sp"
+        android:layout_marginRight="@dimen/dimen_10px"
+        android:layout_marginLeft="@dimen/dimen_10px"
         android:layout_weight="0.7"
-        android:textSize="18sp"
-        android:gravity="right" />
+        android:textSize="@dimen/dimen_30px"
+         />
 
     <TextView
         android:id="@+id/tv_item_bar_value"
         android:layout_width="match_parent"
         android:layout_height = "wrap_content"
-        android:layout_marginBottom="10sp"
-        android:layout_marginLeft="10sp"
-        android:layout_marginRight="10sp"
+        android:layout_marginBottom="@dimen/dimen_20px"
+        android:layout_marginLeft="@dimen/dimen_20px"
+        android:layout_marginRight="@dimen/dimen_20px"
         android:layout_weight="0.3"
-        android:textSize="18sp"
-        android:gravity="left" />
+        android:textSize="@dimen/dimen_30px"
+         />
 
 </LinearLayout>
