--- a/res/layout/test_item_bar.xml
+++ b/res/layout/test_item_bar.xml
@@ -8,25 +8,25 @@
         android:id="@+id/tv_item_bar_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="18sp"
-        android:layout_marginLeft="28sp"
-        android:layout_marginRight="5sp"
+        android:layout_marginTop="@dimen/dimen_36px"
+        android:layout_marginLeft="@dimen/dimen_48px"
+        android:layout_marginRight="@dimen/dimen_10px"
         android:layout_weight="0.7"
         android:gravity="right"
         android:text="@string/app_name"
-        android:textSize="20sp" />
+        android:textSize="@dimen/dimen_30px" />
 
 
     <TextView
         android:id="@+id/tv_item_bar_value"
         android:layout_width="match_parent"
-        android:layout_height="42sp"
-        android:layout_marginBottom="10sp"
-        android:layout_marginLeft="10sp"
-        android:layout_marginRight="10sp"
-        android:layout_marginTop="10sp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/dimen_20px"
+        android:layout_marginLeft="@dimen/dimen_20px"
+        android:layout_marginRight="@dimen/dimen_20px"
+        android:layout_marginTop="@dimen/dimen_20px"
         android:layout_weight="0.3"
         android:gravity="center"
-        android:textSize="20sp" />
+        android:textSize="@dimen/dimen_30px" />
 
 </LinearLayout>
