1.add BT test 2.Fix wifi test cant get scan result issue 3.Fix keypad test

--- a/res/layout/source_item_bar.xml
+++ b/res/layout/source_item_bar.xml
@@ -8,7 +8,8 @@
         android:id = "@+id/str_HDMI1_port"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/dimen_1px"
+        android:layout_marginEnd="@dimen/dimen_1px"
+        android:gravity="top"
         android:layout_weight="0.7"
         android:textSize="@dimen/dimen_36px" />
 
@@ -16,8 +17,9 @@
         android:id = "@+id/str_HDMI2_port"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/dimen_15px"
-        android:layout_marginLeft="@dimen/dimen_10px"
+        android:layout_marginEnd="@dimen/dimen_15px"
+        android:layout_marginStart="@dimen/dimen_10px"
+        android:gravity="top"
         android:layout_weight="0.7"
         android:textSize="@dimen/dimen_36px" />
 
@@ -25,8 +27,9 @@
         android:id = "@+id/str_HDMI3_port"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/dimen_15px"
-        android:layout_marginLeft="@dimen/dimen_10px"
+        android:layout_marginEnd="@dimen/dimen_15px"
+        android:layout_marginStart="@dimen/dimen_10px"
+        android:gravity="top"
         android:layout_weight="0.7"
         android:textSize="@dimen/dimen_36px" />
 
@@ -34,8 +37,9 @@
         android:id = "@+id/str_AV_port"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/dimen_15px"
-        android:layout_marginLeft="@dimen/dimen_10px"
+        android:layout_marginEnd="@dimen/dimen_15px"
+        android:layout_marginStart="@dimen/dimen_10px"
+        android:gravity="top"
         android:layout_weight="0.7"
         android:textSize="@dimen/dimen_36px" />
 
@@ -43,8 +47,9 @@
         android:id = "@+id/str_YUV_port"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/dimen_10px"
-        android:layout_marginLeft="@dimen/dimen_4px"
+        android:layout_marginEnd="@dimen/dimen_10px"
+        android:layout_marginStart="@dimen/dimen_4px"
+        android:gravity="top"
         android:layout_weight="0.7"
         android:textSize="@dimen/dimen_36px" />
 
@@ -52,8 +57,9 @@
         android:id = "@+id/str_ATV_port"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/dimen_10px"
-        android:layout_marginLeft="@dimen/dimen_4px"
+        android:layout_marginEnd="@dimen/dimen_10px"
+        android:layout_marginStart="@dimen/dimen_4px"
+        android:gravity="top"
         android:layout_weight="0.7"
         android:textSize="@dimen/dimen_36px" />
 
@@ -61,8 +67,9 @@
         android:id = "@+id/str_DTV_port"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/dimen_15px"
-        android:layout_marginLeft="@dimen/dimen_10px"
+        android:layout_marginEnd="@dimen/dimen_15px"
+        android:layout_marginStart="@dimen/dimen_10px"
+        android:gravity="top"
         android:layout_weight="0.7"
         android:textSize="@dimen/dimen_36px" />
 
@@ -70,8 +77,9 @@
         android:id = "@+id/str_PC_port"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/dimen_15px"
-        android:layout_marginLeft="@dimen/dimen_10px"
+        android:layout_marginEnd="@dimen/dimen_15px"
+        android:layout_marginStart="@dimen/dimen_10px"
+        android:gravity="top"
         android:layout_weight="0.7"
         android:textSize="@dimen/dimen_36px" />
 
