--- a/res/layout/test_item_bar.xml
+++ b/res/layout/test_item_bar.xml
@@ -8,11 +8,11 @@
         android:id="@+id/tv_item_bar_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/dimen_36px"
-        android:layout_marginLeft="@dimen/dimen_48px"
-        android:layout_marginRight="@dimen/dimen_10px"
+        android:layout_marginTop="@dimen/dimen_20px"
+        android:layout_marginStart="@dimen/dimen_48px"
+        android:layout_marginEnd="@dimen/dimen_10px"
         android:layout_weight="0.7"
-        android:gravity="right"
+        android:gravity="end"
         android:text="@string/app_name"
         android:textSize="@dimen/dimen_30px" />
 
@@ -21,9 +21,8 @@
         android:id="@+id/tv_item_bar_value"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/dimen_20px"
-        android:layout_marginLeft="@dimen/dimen_20px"
-        android:layout_marginRight="@dimen/dimen_20px"
+        android:layout_marginStart="@dimen/dimen_20px"
+        android:layout_marginEnd="@dimen/dimen_20px"
         android:layout_marginTop="@dimen/dimen_20px"
         android:layout_weight="0.3"
         android:gravity="center"
